--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,18 +1,20 @@
 <h1>All the flats</h1>
 <div class="cards">
-  <div class="card-trip">
-    <% @flats.each do |flat| %>
-      <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
-      <div class="card-trip-infos">
-        <div>
-            <h2><%= flat.name %></h2>
-            <p><%= flat.description %></p>
+  <% @flats.each do |flat| %>
+    <%= link_to flat_path(flat.id) do %>
+      <div class="card-trip">
+        <img src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/greece.jpg" />
+        <div class="card-trip-infos">
+          <div>
+              <h2><%= flat.name %></h2>
+              <p><%= flat.description %></p>
+          </div>
+          <h2 class="card-trip-pricing"><%= flat.price_per_night %>€</h2>
+          <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
         </div>
-        <h2 class="card-trip-pricing"><%= flat.price_per_night %>€</h2>
-        <img src="https://kitt.lewagon.com/placeholder/users/krokrob" class="card-trip-user avatar-bordered" />
       </div>
     <% end %>
-  </div>
+  <% end %>
 </div>
 <%= link_to "Add a Flat", new_flat_path %>
 
